deps/v8/test/message/strong-object-freeze-prop.out
# Copyright 2015 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
*%(basename)s:11: TypeError: On strong object #<Object>, redefining writable, non-configurable property 'foo' to be non-writable is deprecated
Object.defineProperty(o, "foo", { writable: false });
       ^
TypeError: On strong object #<Object>, redefining writable, non-configurable property 'foo' to be non-writable is deprecated
    at Function.defineProperty (native)
    at *%(basename)s:11:8
